force-app/main/default/objects/public_replacement_parts__x/public_replacement_parts__x.object-meta.xml
<CustomObject>
    <description>public$replacement_parts</description>
    <externalDataSource>Plane_parts</externalDataSource>
    <externalName>public$replacement_parts</externalName>
    <label>public$replacement_parts</label>
    <pluralLabel>public$replacement_parts</pluralLabel>
</CustomObject>