force-app/main/default/objects/public_replacement_parts__x/fields/ac_model_variation__c.field-meta.xml
<CustomField>
    <fullName>ac_model_variation__c</fullName>
    <description>ac_model_variation</description>
    <externalDeveloperName>ac_model_variation</externalDeveloperName>
    <label>ac_model_variation</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>