force-app/main/default/objects/public_replacement_parts__x/fields/aircraftModel__c.field-meta.xml
<CustomField>
    <fullName>aircraftModel__c</fullName>
    <description>aircraftModel</description>
    <externalDeveloperName>aircraftModel</externalDeveloperName>
    <label>aircraftModel</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>