force-app/main/default/objects/public_replacement_parts__x/fields/brand__c.field-meta.xml
<CustomField>
    <fullName>brand__c</fullName>
    <description>brand</description>
    <externalDeveloperName>brand</externalDeveloperName>
    <label>brand</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>