force-app/main/default/objects/public_replacement_parts__x/fields/part_no__c.field-meta.xml
<CustomField>
    <fullName>part_no__c</fullName>
    <description>part_no</description>
    <externalDeveloperName>part_no</externalDeveloperName>
    <label>part_no</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>