force-app/main/default/objects/public_replacement_parts__x/fields/partID__c.field-meta.xml
<CustomField>
    <fullName>partID__c</fullName>
    <description>partID</description>
    <externalDeveloperName>partID</externalDeveloperName>
    <label>partID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>