force-app/main/default/objects/public_replacement_parts__x/fields/planeID__c.field-meta.xml
<CustomField>
    <fullName>planeID__c</fullName>
    <description>planeID</description>
    <externalDeveloperName>planeID</externalDeveloperName>
    <label>planeID</label>
    <length>255</length>
    <referenceTargetField>Plane__c.Plane_ID__c</referenceTargetField>
    <referenceTo>Plane__c</referenceTo>
    <relationshipLabel>Ordered Replacement Parts</relationshipLabel>
    <relationshipName>public_replacement_parts</relationshipName>
    <type>IndirectLookup</type>
</CustomField>