force-app/main/default/objects/public_replacement_parts__x/fields/price__c.field-meta.xml
<CustomField>
    <fullName>price__c</fullName>
    <description>price</description>
    <externalDeveloperName>price</externalDeveloperName>
    <label>price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>