force-app/main/default/objects/public_replacement_parts__x/fields/product_type__c.field-meta.xml
<CustomField>
    <fullName>product_type__c</fullName>
    <description>product_type</description>
    <externalDeveloperName>product_type</externalDeveloperName>
    <label>product_type</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>