force-app/main/default/objects/public_replacement_parts__x/fields/quantity_on_hand__c.field-meta.xml
<CustomField>
    <fullName>quantity_on_hand__c</fullName>
    <description>quantity_on_hand</description>
    <externalDeveloperName>quantity_on_hand</externalDeveloperName>
    <label>quantity_on_hand</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>