force-app/main/default/objects/public_replacement_parts__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>DisplayUrl</columns>
    <columns>planeID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>